--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     font-family: 'roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
 height: 80px;
 display: flex;
@@ -13,6 +18,14 @@ display: flex;
 
 img {
     width: 100%;
+}
+
+p {
+    line-height: 1.5;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav_container {
@@ -121,6 +134,7 @@ button:active {
 
 .header_img-wrapper {
     padding: 20px;
+    z-index: 2;
 }
 
 .container {
@@ -133,10 +147,51 @@ button:active {
     margin: 0 auto;
 }
 
+.row_explore {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 /*
 highlights
 */
+
+
+#highlights {
+    position: relative;
+}
+
+#highlights:before {
+background: url(./assets/wave.svg);
+content: "";
+position: absolute;
+top: 1px;
+left: 0;
+transform: translateY(-100%);
+width: 101vw;
+height: 12vw;
+background-size: cover;
+background-repeat: no-repeat;
+z-index: 1;
+}
+
+#highlights::after {
+position: absolute;
+background: url(./assets/wave.svg);
+content: "";
+position: absolute;
+bottom: 1px;
+left: 0;
+transform: translateY(100%) rotate(180deg);
+width: 101vw;
+height: 12vw;
+background-size: cover;
+background-repeat: no-repeat;
+z-index: 1;
+}
+
 
 .highlight_wrapper {
    display: flex;
@@ -153,6 +208,7 @@ highlights
 
 .higlight_para {
     text-align: center;
+    max-width: 280px;
 }
 
 .highlight_img {
@@ -171,4 +227,92 @@ highlights
 .highlight_subtitle {
     font: 20px;
     margin-bottom: 16px;
+}
+
+/*  
+features
+*/
+
+#features {
+    background-color: rgba(115, 66, 214, 0.1);
+    padding-top: 8vw;
+    
+}
+
+.book_img {
+   max-height: 380px;
+   transition: 300ms ease;
+   cursor: no-drop;
+}
+
+.books {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.book {
+    width: 25%;
+    padding: 24px;
+}
+
+.book_img-wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book_img {
+    transform: scale(1.03);
+}
+
+.book_title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book_title:hover {
+    text-decoration: underline;
+    cursor: no-drop;
+}
+
+.book_ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book_price-normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+#explore {
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+.footer_link-no-cursor:hover{
+    cursor: not-allowed;
+}
+
+/*FOOTER*/
+
+footer {
+    background-color: #242424;
+}
+.footer_logo-img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer_link-no-cursor,
+.footer_link,
+.footer_copyright {
+color: white;
+text-decoration: none;
+padding: 0 8px;
+}
+
+.footer_list {
+margin: 24px 0;
 }
