--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: 'roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -26,6 +30,10 @@ p {
 
 a:hover {
     text-decoration: underline;
+}
+
+a {
+    text-decoration: none;
 }
 
 .nav_container {
@@ -74,6 +82,54 @@ li {
 
 .nav_link-primary:hover {
     text-decoration: none;
+}
+
+.btn_menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;  
+    border: none;  
+    color: #7342d6;
+}
+
+.menu_backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.menu_open .menu_backdrop {
+display: flex;
+}
+
+.menu_links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.menu_list {
+    padding: 32px 0;
+}
+
+.menu_link {
+    color: white;
+    font-size: 40px;
+}
+
+.btn_menu-close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
 }
 
 #landing {
@@ -315,4 +371,8 @@ padding: 0 8px;
 
 .footer_list {
 margin: 24px 0;
+}
+
+.no_cursor {
+    cursor: not-allowed;
 }
