--- a/style.css
+++ b/style.css
@@ -106,6 +106,14 @@ li {
     display: none;
 }
 
+.btn_menu-close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
 .menu_open .menu_backdrop {
 display: flex;
 }
@@ -124,13 +132,7 @@ display: flex;
     font-size: 40px;
 }
 
-.btn_menu-close {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    padding: 8px;
-    color: white;
-}
+
 
 #landing {
     background-color: rgba(115, 66, 214, 0.1)
@@ -375,4 +377,14 @@ margin: 24px 0;
 
 .no_cursor {
     cursor: not-allowed;
+}
+
+@media (max-width: 550px) {
+    .nav_link {
+        display: none;
+    }
+
+    .btn_menu {
+        display: block;
+    }
 }
